<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckListFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Space
                        android:layout_width="16dp"
                        android:layout_height="32dp" />

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/cur_cl_image"
                            android:layout_width="140dp"
                            android:layout_height="140dp"
                            android:background="@drawable/border_image"
                            android:cropToPadding="true"
                            android:importantForAccessibility="no"
                            android:padding="1dp"
                            android:scaleType="centerCrop" />

                        <Space
                            android:layout_width="8dp"
                            android:layout_height="60dp"
                            android:layout_weight="1" />

                        <LinearLayout
                            android:layout_width="160dp"
                            android:layout_height="match_parent"
                            android:gravity="bottom"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/cur_cl_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Short Title"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/cur_cl_fulltitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="The Full TItle"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/cur_cl_desc"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="The longer description goes here."
                                android:textSize="12sp" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/small_logo_img"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:paddingTop="8dp"
                    android:src="@drawable/simple_transp_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Space
                android:layout_width="8dp"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Checklist"
                android:textSize="24sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="Section 1: Safety"
                android:textSize="13dp" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <CheckBox
                android:id="@+id/cbQ1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CLQ1"
                android:textColor="@color/text_grey"
                android:textSize="13sp" />

            <CheckBox
                android:id="@+id/cbQ2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CLQ2"
                android:textColor="@color/text_grey"
                android:textSize="13sp" />

            <CheckBox
                android:id="@+id/cbQ3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CLQ3"
                android:textColor="@color/text_grey"
                android:textSize="13sp" />

            <CheckBox
                android:id="@+id/cbQ4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CLQ4"
                android:textColor="@color/text_grey"
                android:textSize="13sp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="1">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="4dp"
                            android:paddingRight="4dp"
                            android:text="Full Name:"
                            android:textSize="13sp" />

                        <EditText
                            android:id="@+id/etName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/textbox_background"
                            android:gravity="left"
                            android:hint="Enter your full name."
                            android:inputType="textPersonName"
                            android:padding="8dp"
                            android:textColor="@color/text_grey"
                            android:textSize="13sp"
                            tools:ignore="TouchTargetSizeCheck" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp">

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="4dp"
                            android:paddingRight="4dp"
                            android:text="Club Email:"
                            android:textSize="13sp" />

                        <EditText
                            android:id="@+id/etEmail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/textbox_background"
                            android:hint="example@yachtclub.com"
                            android:inputType="textEmailAddress"
                            android:padding="8dp"
                            android:textColor="@color/text_grey"
                            android:textSize="13sp"
                            tools:ignore="TouchTargetSizeCheck" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp">

                        <TextView
                            android:id="@+id/textView18"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="4dp"
                            android:paddingRight="4dp"
                            android:text="Comments:"
                            android:textSize="13sp" />

                        <EditText
                            android:id="@+id/etComments"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/textbox_background"
                            android:gravity="start|top"
                            android:hint="Enter optional comments here."
                            android:inputType="textMultiLine"
                            android:lines="3"
                            android:padding="8dp"
                            android:textColor="@color/text_grey"
                            android:textSize="13sp" />
                    </TableRow>

                </TableLayout>

                <Button
                    android:id="@+id/button_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="Submit"
                    android:textColor="@color/text_grey" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>